# wallcraft

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
scripts/: generate_icon.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: files.rs  generation.rs  mod.rs  monitor.rs  settings.rs  upscale.rs  wallpaper.rs
src-tauri/src/models/: generation.rs  mod.rs  monitor.rs  settings.rs
src-tauri/src/services/: mod.rs  openai.rs  pollinations.rs  svg_generator.rs  upscaler.rs  wallpaper_manager.rs
src/lib/components/: CategorySelector.svelte  GenerationProgress.svelte  ImagePreview.svelte  MonitorLayout.svelte  Navbar.svelte  PromptInput.svelte  TryCountdown.svelte
src/lib/stores/: generation.svelte.ts  monitors.svelte.ts  settings.svelte.ts  wallpaper.svelte.ts
src/lib/utils/: categories.ts  navigation.svelte.ts  prompt-builder.ts
src/lib/views/: GenerateView.svelte  HomeView.svelte  PreviewView.svelte  SettingsView.svelte
src/routes/: +page.svelte
