[package]
name = "wallcraft"
version = "0.1.0"
description = "AI-powered desktop wallpaper generator"
authors = ["you"]
edition = "2021"

[lib]
name = "wallcraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
wallpaper = "3"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"
urlencoding = "2"
rand = "0.8"
log = "0.4"
